--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1427,7 +1427,8 @@ figure {
 }
 
 img {
-    vertical-align: middle
+    vertical-align: middle;
+    margin: auto;
 }
 
 .carousel-inner>.item>a>img,
@@ -7682,17 +7683,16 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #fff
+    background-color: #fff;
 }
 
 .carousel-caption {
@@ -7709,7 +7709,7 @@ button.close {
 }
 
 .carousel-caption .btn {
-    text-shadow: none
+    text-shadow: none;
 }
 
 @media screen and (min-width:768px) {
